--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -108,8 +108,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="n64video.cpp" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="n64video.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gfx #1.3.h" />
