--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -109,12 +109,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
-    <ClCompile Include="n64video.c" />
+    <ClCompile Include="rdp.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gfx #1.3.h" />
     <ClInclude Include="tctables.h" />
-    <ClInclude Include="z64.h" />
+    <ClInclude Include="rdp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
