--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -112,7 +112,7 @@
     <ClCompile Include="rdp.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Gfx #1.3.h" />
+    <ClInclude Include="gfx_1.3.h" />
     <ClInclude Include="tctables.h" />
     <ClInclude Include="rdp.h" />
   </ItemGroup>
