--- a/angrylion.vcxproj.filters
+++ b/angrylion.vcxproj.filters
@@ -23,13 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Gfx #1.3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="tctables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rdp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gfx_1.3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
