--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -112,6 +112,10 @@
     <ClCompile Include="memutil.c" />
     <ClCompile Include="msg.c" />
     <ClCompile Include="rdp.c" />
+    <ClCompile Include="rdp\vi.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="screen.c" />
   </ItemGroup>
   <ItemGroup>
