--- a/angrylion.vcxproj.filters
+++ b/angrylion.vcxproj.filters
@@ -13,9 +13,6 @@
       <UniqueIdentifier>{142a5325-573c-4fde-9d8f-af10cb6e28e5}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
-    <Filter Include="Source Files\rdp">
-      <UniqueIdentifier>{fd3bafd5-9691-4325-8678-5e7977f423a6}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -33,8 +30,8 @@
     <ClCompile Include="memutil.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="rdp\vi.c">
-      <Filter>Source Files\rdp</Filter>
+    <ClCompile Include="vi.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
