Converted irand.c to header file

--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -108,10 +108,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="irand.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="irand.h" />
     <ClCompile Include="main.c" />
     <ClCompile Include="msg.c" />
     <ClCompile Include="plugin.c" />
