Added C++11 based multi-threaded rendering support

--- a/angrylion.vcxproj.filters
+++ b/angrylion.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="irand.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="parallel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="parallel_c.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rdp.h">
@@ -63,6 +69,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rdram.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parallel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parallel_c.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
