--- a/angrylion.vcxproj
+++ b/angrylion.vcxproj
@@ -80,7 +80,6 @@
       <OmitFramePointers>true</OmitFramePointers>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
-      <ExceptionHandling />
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <SmallerTypeCheck>false</SmallerTypeCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -111,6 +110,8 @@
     <ClCompile Include="irand.h" />
     <ClCompile Include="main.c" />
     <ClCompile Include="msg.c" />
+    <ClCompile Include="parallel.cpp" />
+    <ClCompile Include="parallel_c.cpp" />
     <ClCompile Include="plugin.c" />
     <ClCompile Include="rdp.c" />
     <ClCompile Include="rdram.c" />
@@ -121,6 +122,8 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="gfx_1.3.h" />
     <ClInclude Include="msg.h" />
+    <ClInclude Include="parallel.hpp" />
+    <ClInclude Include="parallel_c.hpp" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="rdram.h" />
     <ClInclude Include="screen.h" />
