--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -113,6 +113,8 @@
     <ClCompile Include="parallel_c.cpp" />
     <ClCompile Include="rdp.c" />
     <ClCompile Include="rdram.c" />
+    <ClCompile Include="trace_read.c" />
+    <ClCompile Include="trace_write.c" />
     <ClCompile Include="vi.c" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +127,9 @@
     <ClInclude Include="rdram.h" />
     <ClInclude Include="rdp.h" />
     <ClInclude Include="screen.h" />
+    <ClInclude Include="trace.h" />
+    <ClInclude Include="trace_read.h" />
+    <ClInclude Include="trace_write.h" />
     <ClInclude Include="vi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
