--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClCompile Include="core.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="trace_read.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="trace_write.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -65,6 +71,15 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="core.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="trace.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="trace_read.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="trace_write.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
