--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -107,6 +107,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="core.c" />
+    <ClCompile Include="file.c" />
     <ClCompile Include="irand.h" />
     <ClCompile Include="msg.c" />
     <ClCompile Include="parallel.cpp" />
@@ -120,6 +121,7 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="core.h" />
+    <ClInclude Include="file.h" />
     <ClInclude Include="msg.h" />
     <ClInclude Include="parallel.hpp" />
     <ClInclude Include="parallel_c.hpp" />
