--- a/plugin-zilmar/plugin-zilmar.vcxproj.filters
+++ b/plugin-zilmar/plugin-zilmar.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="screen_opengl.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="plugin_zilmar.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gfx_1.3.c">
@@ -31,13 +34,13 @@
     <ClCompile Include="gl_core_3_3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="plugin.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="wgl_ext.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="screen_opengl.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plugin_zilmar.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
