--- a/retrace/retrace.vcxproj
+++ b/retrace/retrace.vcxproj
@@ -171,6 +171,7 @@
   <ItemGroup>
     <ClCompile Include="plugin_retrace.c" />
     <ClCompile Include="retrace.c" />
+    <ClCompile Include="screen_headless.c" />
     <ClCompile Include="screen_sdl.c" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +180,7 @@
   <ItemGroup>
     <ClInclude Include="plugin_retrace.h" />
     <ClInclude Include="retrace.h" />
+    <ClInclude Include="screen_headless.h" />
     <ClInclude Include="screen_sdl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
