--- a/retrace/retrace.vcxproj.filters
+++ b/retrace/retrace.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="plugin_retrace.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="screen_headless.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="plugin_retrace.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="screen_headless.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
