--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -82,5 +82,8 @@
     <ClInclude Include="file.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="core_version.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
