Moved screenshot code from screen to VI. Properly implemented interlaced screenshots without aspect ratio tricks by duplicating every other line. Added FILE_MAX_PATH constant.

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -85,5 +85,8 @@
     <ClInclude Include="core_version.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="bitmap.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
