--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -222,6 +222,7 @@
     <ClCompile Include="vi.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bitmap.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="core.h" />
     <ClInclude Include="core_version.h" />
