Fix building under clang

--- a/plugin-mupen64plus/projects/unix/Makefile
+++ b/plugin-mupen64plus/projects/unix/Makefile
@@ -116,7 +116,7 @@ endif
 OPTFLAGS ?= -O3 -flto
 WARNFLAGS ?= -Wall
 CFLAGS += $(OPTFLAGS) $(WARNFLAGS) -ffast-math -fno-strict-aliasing -fvisibility=hidden -I$(SRCDIR)
-CXXFLAGS += -fvisibility-inlines-hidden
+CXXFLAGS += -fvisibility-inlines-hidden -std=c++14
 LDFLAGS += $(SHARED)
 
 ifeq ($(CPU), X86)
