--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -109,7 +109,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>python $(SolutionDir)git_describe.py</Command>
+      <Command>python "$(SolutionDir)make_version.py" "$(ProjectDir)version.h.in" "$(ProjectDir)version.h"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -132,7 +132,7 @@
       <ImportLibrary>$(OutDir)angrylion.lib</ImportLibrary>
     </Link>
     <PreBuildEvent>
-      <Command>python $(SolutionDir)git_describe.py</Command>
+      <Command>python "$(SolutionDir)make_version.py" "$(ProjectDir)version.h.in" "$(ProjectDir)version.h"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -168,7 +168,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>python $(SolutionDir)git_describe.py</Command>
+      <Command>python "$(SolutionDir)make_version.py" "$(ProjectDir)version.h.in" "$(ProjectDir)version.h"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -205,7 +205,7 @@
       <ImportLibrary>$(OutDir)angrylion.lib</ImportLibrary>
     </Link>
     <PreBuildEvent>
-      <Command>python $(SolutionDir)git_describe.py</Command>
+      <Command>python "$(SolutionDir)make_version.py" "$(ProjectDir)version.h.in" "$(ProjectDir)version.h"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -225,7 +225,6 @@
     <ClInclude Include="bitmap.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="core.h" />
-    <ClInclude Include="core_version.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="msg.h" />
     <ClInclude Include="parallel.hpp" />
@@ -236,6 +235,9 @@
     <ClInclude Include="trace_read.h" />
     <ClInclude Include="trace_write.h" />
     <ClInclude Include="vi.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="version.h.in" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
